fixed copyright and headers

--- a/freesbb/wpa_supplicant/wpa_supplicant.conf
+++ b/freesbb/wpa_supplicant/wpa_supplicant.conf
@@ -1,4 +1,5 @@
-# cimon, SBB, FSe 2016
+# Copyright (C) Schweizerische Bundesbahnen SBB, 2016
+# Cimon
 # autoconnect to the freesbb wlan network...
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
