fix: set the wpa country

--- a/freesbb/wpa_supplicant/wpa_supplicant.conf
+++ b/freesbb/wpa_supplicant/wpa_supplicant.conf
@@ -3,6 +3,7 @@
 # autoconnect to the freesbb wlan network...
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+country=CH
 
 network={
 	ssid="SBB-FREE"
